--- a/app/src/main/res/layout/activity_audio_preview.xml
+++ b/app/src/main/res/layout/activity_audio_preview.xml
@@ -10,7 +10,7 @@
         android:layout_gravity="center"
         android:textColor="#000000"
         android:layout_marginTop="@dimen/dp10"/>
-    <videoeditor.bhuvnesh.com.ffmpegvideoeditor.views.VisualizerView
+    <protect.videotranscoder.views.VisualizerView
         android:id="@+id/visualizerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
