Remove range bar instructions
The range bar will eventually be available for all encoding, not
just for a cut option.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,22 +57,10 @@
             android:textColor="#000000" />
 
         <TextView
-            android:id="@+id/tvInstructions"
-            android:visibility="invisible"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tvRight"
-            android:layout_centerHorizontal="true"
-            android:layout_margin="@dimen/dp5"
-            android:gravity="center"
-            android:text="@string/rangeSeekBarText"
-            android:textColor="#000000" />
-
-        <TextView
             android:id="@+id/uploadVideo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvInstructions"
+            android:layout_below="@+id/rangeSeekBar"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/dp5"
             android:background="@drawable/upload_video_selector"
