Position buttons below slider and its time text

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,8 +54,8 @@
                 android:id="@+id/buttonContainer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
+                android:layout_below="@id/tvRight"
                 android:orientation="horizontal">
                 <ImageView
                     android:id="@+id/startJumpBack"
